--- a/Sistema/Sistema/Sistema.csproj
+++ b/Sistema/Sistema/Sistema.csproj
@@ -105,10 +105,12 @@
     <Content Include="CapaPresentacion\Css\fonts.css" />
     <Content Include="CapaPresentacion\Css\Formularios.css" />
     <Content Include="CapaPresentacion\Css\Gripviev.css" />
+    <Content Include="CapaPresentacion\Html\Mantenimiento\CActivPrevenc.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\CCapacitación.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\CIncendForest.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\CMenuPoliza.aspx" />
     <Content Include="CapaPresentacion\Html\BombForest\MBomInfoPerson.aspx" />
+    <Content Include="CapaPresentacion\Html\Mantenimiento\MActivPrevenc.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\MCapacitación.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\MIncendForest.aspx" />
     <Content Include="CapaPresentacion\Html\Mantenimiento\MMenuPoliza.aspx" />
@@ -225,6 +227,13 @@
     <Compile Include="CapaLogicaNegocio\AreaConservacion.cs" />
     <Compile Include="CapaPresentacion\Code\ImageControl.cs" />
     <Compile Include="CapaPresentacion\Code\VariablesSeccionControl.cs" />
+    <Compile Include="CapaPresentacion\Html\Mantenimiento\CActivPrevenc.aspx.cs">
+      <DependentUpon>CActivPrevenc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CapaPresentacion\Html\Mantenimiento\CActivPrevenc.aspx.designer.cs">
+      <DependentUpon>CActivPrevenc.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CapaPresentacion\Html\Mantenimiento\CCapacitación.aspx.cs">
       <DependentUpon>CCapacitación.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -252,6 +261,13 @@
     </Compile>
     <Compile Include="CapaPresentacion\Html\BombForest\MBomInfoPerson.aspx.designer.cs">
       <DependentUpon>MBomInfoPerson.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CapaPresentacion\Html\Mantenimiento\MActivPrevenc.aspx.cs">
+      <DependentUpon>MActivPrevenc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CapaPresentacion\Html\Mantenimiento\MActivPrevenc.aspx.designer.cs">
+      <DependentUpon>MActivPrevenc.aspx</DependentUpon>
     </Compile>
     <Compile Include="CapaPresentacion\Html\Mantenimiento\MCapacitación.aspx.cs">
       <DependentUpon>MCapacitación.aspx</DependentUpon>
